--- a/src/utils/toast.module.scss
+++ b/src/utils/toast.module.scss
@@ -1,4 +1,5 @@
 @use "src/stylesheets/variables/spacings";
+@use "src/stylesheets/variables/typo";
 
 :root {
   --toastify-icon-color-error: var(--red-reign-600);
@@ -13,6 +14,11 @@
 
 :global(.Toastify__toast-body) {
   padding: spacings.$s-3 spacings.$s-2;
+  a {
+    color: var(--english-breakfast-700);
+    text-decoration: underline;
+    font-size: typo.$xs;
+  }
 }
 
 :global(.Toastify__toast-icon) {
