fix: add missing 'toggleMenu' handler to 'Account' link in mobile nav

--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -184,6 +184,9 @@ $body-margin: 2.5rem;
       a:nth-child(5) {
         animation-delay: 0.6s;
       }
+      a:nth-child(6) {
+        animation-delay: 0.7s;
+      }
     }
 
     h2 {
