--- a/src/components/presentational/tag/index.module.scss
+++ b/src/components/presentational/tag/index.module.scss
@@ -4,8 +4,8 @@
   padding: 0.25rem;
   border-width: 1px;
   font-size: typo.$xs;
-  border-color: var(--smooth-coffee-600);
-  color: var(--smooth-coffee-600);
+  border-color: hsl(var(--smooth-coffee-600));
+  color: hsl(var(--smooth-coffee-600));
   border-style: solid;
   border-radius: 4px;
   text-transform: uppercase;
