--- a/src/components/others/header/index.module.scss
+++ b/src/components/others/header/index.module.scss
@@ -70,7 +70,7 @@ $body-margin: 2.5rem;
     border-bottom: 1px solid black;
     padding-bottom: 2px;
     margin: 0 auto;
-    background-color: var(--starbright-600);
+    background-color: hsl(var(--starbright-600));
     z-index: 999;
   }
 
@@ -111,7 +111,7 @@ $body-margin: 2.5rem;
     right: 0;
     height: 100%;
     max-height: 100vh;
-    background-color: var(--starbright-600);
+    background-color: hsl(var(--starbright-600));
     background-repeat: repeat;
     z-index: 999;
     transition: opacity 0.4s ease-out;
