--- a/src/components/others/route_article/arbitrationDetails/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/index.module.scss
@@ -1,13 +1,6 @@
 @use "src/stylesheets/variables/spacings";
 @use "src/stylesheets/variables/typo";
 
-
-
-
-
-$green: hsl(180, 46%, 15%);
-$pink: hsl(313, 74%, 35%);
-
 .arbitrationDetails {
   .titleWrapper {
     display: flex;
@@ -25,17 +18,15 @@ $pink: hsl(313, 74%, 35%);
     justify-content: space-between;
     padding: spacings.$s-3 spacings.$s-4;
     margin-bottom: spacings.$s-7;
-    border: 1px solid var(--english-breakfast-900);
+    border: 1px solid hsl(var(--english-breakfast-900));
     border-radius: 4px;
-    box-shadow: inset 0.125rem 0.125rem 0.5rem 0 var(--starbright-700), 0rem 0.25rem 0.5rem 0 var(--starbright-700);
-    color: var(--english-breakfast-600);
-
-
+    box-shadow: inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--starbright-700), 0.25), 0rem 0.25rem 0.5rem 0 hsl(var(--starbright-700), 0.25);
+    color: hsl(var(--english-breakfast-600));
 
     > span {
       b {
         margin-right: spacings.$s-2;
-        color:var(--dark-orchestra-600);
+        color:hsl(var(--dark-orchestra-600));
       }
     }
   }
