--- a/src/components/presentational/button/index.module.scss
+++ b/src/components/presentational/button/index.module.scss
@@ -8,18 +8,18 @@
   padding: 0.75rem 1.5rem;
   font-size: typo.$s;
   outline: none;
-  color: var(--starbright-600);
-  background-color: var(--english-breakfast-600);
-  border-color:var(--english-breakfast-600);
-  box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-700), 0.25),
-  inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-700), 0.5);
+  color: hsl(var(--starbright-600));
+  background-color: hsl(var(--english-breakfast-600));
+  border-color:hsl(var(--english-breakfast-600));
+  box-shadow: 0 0.25rem 0.5rem 0 hsl(var(--english-breakfast-700), 0.25),
+  inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--english-breakfast-700), 0.5);
 
   &:global(.secondary) {
-    color: var(--dark-orchestra-600);
+    color: hsl(var(--dark-orchestra-600));
     background-color: transparent;
-    border-color: var(--english-breakfast-800);
-    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-900), 0.25),
-    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-900), 0.5);
+    border-color: hsl(var(--english-breakfast-800));
+    box-shadow: 0 0.25rem 0.5rem 0 hsl(var(--english-breakfast-900), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--english-breakfast-900), 0.5);
 
   }
 
@@ -31,29 +31,29 @@
 
 
   &:hover {
-    color: var(--starbright-600);
-    background-color: var(--english-breakfast-700);
-    border-color: var(--english-breakfast-700);
-    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-800), 0.25),
-    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-800), 0.5);
+    color: hsl(var(--starbright-600));
+    background-color: hsl(var(--english-breakfast-700));
+    border-color: hsl(var(--english-breakfast-700));
+    box-shadow: 0 0.25rem 0.5rem 0 hsl(var(--english-breakfast-800), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--english-breakfast-800), 0.5);
   }
 
 
 
   &:active {
-    color: var(--starbright-600);
-    background-color: var(--english-breakfast-900);
-    border-color: var(--english-breakfast-900);
-    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--english-breakfast-1000), 0.25),
-    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--english-breakfast-1000), 0.5);
+    color: hsl(var(--starbright-600));
+    background-color: hsl(var(--english-breakfast-900));
+    border-color: hsl(var(--english-breakfast-900));
+    box-shadow: 0 0.25rem 0.5rem 0 hsl(var(--english-breakfast-1000), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--english-breakfast-1000), 0.5);
   }
 
   &[disabled], &[disabled]:hover {
-    color: var(--smooth-coffee-400);
-    background-color: var(--english-breakfast-200);
-    border-color: var(--english-breakfast-200);
-    box-shadow: 0 0.25rem 0.5rem 0 hsla(var(--smooth-coffe-300), 0.25),
-    inset 0.125rem 0.125rem 0.5rem 0 hsla(var(--smooth-coffe-300), 0.5);
+    color: hsl(var(--smooth-coffee-400));
+    background-color: hsl(var(--english-breakfast-200));
+    border-color: hsl(var(--english-breakfast-200));
+    box-shadow: 0 0.25rem 0.5rem 0 hsl(var(--smooth-coffe-300), 0.25),
+    inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--smooth-coffe-300), 0.5);
   }
 
 }
