--- a/src/components/presentational/progressBar/index.module.scss
+++ b/src/components/presentational/progressBar/index.module.scss
@@ -1,8 +1,8 @@
 @use "src/stylesheets/variables/spacings";
 @use "src/stylesheets/variables/typo";
 
-$brownDarken40: hsla(var(--english-breakfast-800), 0.6);
-$brownDarken20: hsla(var(--english-breakfast-700), 0.6);
+$brownDarken40: hsl(var(--english-breakfast-800), 0.6);
+$brownDarken20: hsl(var(--english-breakfast-700), 0.6);
 $green: hsl(180, 46%, 15%);
 $pink: hsl(313, 74%, 35%);
 
