--- a/src/utils/toast.module.scss
+++ b/src/utils/toast.module.scss
@@ -2,10 +2,10 @@
 @use "src/stylesheets/variables/typo";
 
 :root {
-  --toastify-icon-color-error: var(--red-reign-600);
-  --toastify-icon-color-success: var(--army-green-600);
-  --toastify-icon-color-info: var(--smooth-coffee-600);
-  --toastify-icon-color-warning: var(--gryphonne-sepia-wash-600);
+  --toastify-icon-color-error: hsl(var(--red-reign-600));
+  --toastify-icon-color-success: hsl(var(--army-green-600));
+  --toastify-icon-color-info: hsl(var(--smooth-coffee-600));
+  --toastify-icon-color-warning: hsl(var(--gryphonne-sepia-wash-600));
 }
 
 :global(.Toastify__toast) {
@@ -15,7 +15,7 @@
 :global(.Toastify__toast-body) {
   padding: spacings.$s-3 spacings.$s-2;
   a {
-    color: var(--english-breakfast-700);
+    color: hsl(var(--english-breakfast-700));
     text-decoration: underline;
     font-size: typo.$xs;
   }
@@ -28,31 +28,31 @@
 }
 
 :global(.Toastify__toast--error) {
-  background-color: var(--red-reign-100);
+  background-color: hsl(var(--red-reign-100));
   border: 1px solid;
-  border-color: var(--red-reign-400);
-  color: var(--red-reign-600);
+  border-color: hsl(var(--red-reign-400));
+  color: hsl(var(--red-reign-600));
 }
 
 :global(.Toastify__toast--success) {
-  background-color: var(--starbright-200);
+  background-color: hsl(var(--starbright-200));
   border: 1px solid;
-  border-color: var(--army-green-400);
-  color: var(--army-green-600);
+  border-color: hsl(var(--army-green-400));
+  color: hsl(var(--army-green-600));
 }
 
 :global(.Toastify__toast--warning) {
-  background-color: var(--gryphonne-sepia-wash-100);
+  background-color: hsl(var(--gryphonne-sepia-wash-100));
   border: 1px solid;
-  border-color: var(--gryphonne-sepia-wash-400);
-  color: var(--gryphonne-sepia-wash-600);
+  border-color: hsl(var(--gryphonne-sepia-wash-400));
+  color: hsl(var(--gryphonne-sepia-wash-600));
 }
 
 :global(.Toastify__toast--info .Toastify__toast--default) {
-  background-color: var(--smooth-coffee-100);
+  background-color: hsl(var(--smooth-coffee-100));
   border: 1px solid;
-  border-color: var(--smooth-coffee-400);
-  color: var(--smooth-coffee-600);
+  border-color: hsl(var(--smooth-coffee-400));
+  color: hsl(var(--smooth-coffee-600));
 }
 
 :global(.Toastify__progress-bar) {
