--- a/src/components/others/route_article/arbitrationDetails/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/index.module.scss
@@ -17,16 +17,17 @@
     flex-flow: row wrap;
     justify-content: space-between;
     padding: spacings.$s-3 spacings.$s-4;
-    margin-bottom: spacings.$s-7;
+    margin-bottom: spacings.$s-12;
     border: 1px solid hsl(var(--english-breakfast-900));
     border-radius: 4px;
-    box-shadow: inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--starbright-700), 0.25), 0rem 0.25rem 0.5rem 0 hsl(var(--starbright-700), 0.25);
+    box-shadow: inset 0.125rem 0.125rem 0.5rem 0 hsl(var(--starbright-700), 0.25),
+      0rem 0.25rem 0.5rem 0 hsl(var(--starbright-700), 0.25);
     color: hsl(var(--english-breakfast-600));
 
     > span {
       b {
         margin-right: spacings.$s-2;
-        color:hsl(var(--dark-orchestra-600));
+        color: hsl(var(--dark-orchestra-600));
       }
     }
   }
