--- a/src/components/presentational/breadcrumb/index.module.scss
+++ b/src/components/presentational/breadcrumb/index.module.scss
@@ -4,9 +4,15 @@
 .breadcrumb {
   margin-top: spacings.$s-8;
   margin-bottom: spacings.$s-2;
+
+  li:last-child > span{
+    font-weight: bold;
+  }
+
+  :global(.ant-breadcrumb) {
+    color: hsl(var(--smooth-coffee-600));
+    font-size: typo.$xs;
+  }
 }
 
-:global(.ant-breadcrumb) {
-  color: hsl(var(--smooth-coffee-600));
-  font-size: typo.$xs;
-}
+
