--- a/src/components/others/eventLog/index.module.scss
+++ b/src/components/others/eventLog/index.module.scss
@@ -2,8 +2,7 @@
 @use "src/stylesheets/variables/spacings";
 
 .eventLog {
-  width: 95%;
-  max-width: 100vw;
+  max-width: 80vw;
 
   .title {
     font-size: typo.$xl;
@@ -55,7 +54,8 @@
       }
 
       td {
-        padding: spacings.$s-4;
+        padding: spacings.$s-4 spacings.$s-7 spacings.$s-4 0;
+
         &.evidenceRow {
           padding: spacings.$s-1 spacings.$s-2;
         }
@@ -64,17 +64,22 @@
 
     th,
     td {
-      padding: spacings.$s-4;
+      padding: spacings.$s-4 spacings.$s-7 spacings.$s-4 0;
       text-transform: capitalize;
 
-      &:nth-child(1),
-      &:nth-child(3) {
+      &:nth-child(1) {
         width: 20%;
       }
+      &:nth-child(2) {
+        width: 35%;
+      }
 
-      &:nth-child(2),
+      &:nth-child(3) {
+        width: 15%;
+      }
       &:nth-child(4) {
         width: 30%;
+        padding-right: 0;
       }
     }
   }
