--- a/src/components/presentational/modal/index.module.scss
+++ b/src/components/presentational/modal/index.module.scss
@@ -9,8 +9,7 @@ $colorShadow3: hsl(var(--english-breakfast-600), 0.25);
   color: hsl(var(--dark-orchestra-600));
   border-radius: 20px;
 
-  background-color: hsl(var(--starbright-600));
-  background: url("/src/assets/paper-texture-surface-texture-small.jpg");
+  background: hsl(var(--starbright-600)) url("/src/assets/paper-texture-surface-texture-small.jpg");
   box-shadow: inset 20px 20px 250px 0px $colorShadow1, 0px 5px 30px 0px $colorShadow2, 0px 10px 30px 0px $colorShadow3;
 }
 
