fix: width of evidence modal and title font size

--- a/src/components/others/evidenceModal/index.module.scss
+++ b/src/components/others/evidenceModal/index.module.scss
@@ -2,8 +2,12 @@
 @use "src/stylesheets/variables/spacings";
 
 .evidenceModal {
-  width: 90%;
-  max-width: 1200px;
+  max-width: 80vw;
+
+  .title {
+    font-size: typo.$xl;
+    margin-top: spacings.$s-7;
+  }
 
   .label {
     font-size: typo.$m;
