--- a/src/components/others/route_article/arbitrationDetails/evidence/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/evidence/index.module.scss
@@ -7,14 +7,29 @@
   margin-bottom: spacings.$s-5;
 
   .evidenceCard {
-    margin: spacings.$s-6 spacings.$s-1;
+    margin: spacings.$s-4 spacings.$s-1;
+
+    .header {
+      display: flex;
+      align-items: center;
+      .title {
+        text-transform: capitalize;
+        margin-right: spacings.$s-4;
+      }
+      a {
+        text-decoration: underline;
+      }
+    }
 
     .description {
-      margin: spacings.$s-6 0;
+      margin-top: spacings.$s-3;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
-    .timestamp {
-      color: #8d8282;
 
+    .timestamp {
+      color: hsl(var(--smooth-coffee-600));
+      font-size: typo.$xs;
       span {
         color: black;
       }
@@ -22,10 +37,6 @@
 
     h4 {
       margin-bottom: spacings.$s-1;
-    }
-
-    a {
-      text-decoration: underline;
     }
   }
 }
