--- a/src/stylesheets/_theme.scss
+++ b/src/stylesheets/_theme.scss
@@ -104,7 +104,7 @@
 
 }
 
-body {
+body, .withBackground{
   background-color: hsl(var(--starbright-600));
   position: relative;
 }
@@ -121,7 +121,7 @@ body::after, .withBackground::after {
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;
+  z-index: -9;
 }
 
 footer {
