--- a/src/components/presentational/select/index.module.scss
+++ b/src/components/presentational/select/index.module.scss
@@ -1,34 +1,77 @@
 @use "src/stylesheets/variables/typo";
 @use "src/stylesheets/variables/spacings";
 
-:global(.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
-  height: 100%;
-  border: none;
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-  padding: spacings.$s-2 spacings.$s-4;
+@function shadowTemplate($color) {
+  @return 0rem 0.25rem 0.5rem 0rem hsl($color, 0.25);
 }
 
-:global(.ant-select-single .ant-select-selector .ant-select-selection-item) {
-  padding-right: spacings.$s-8;
-  line-height: inherit;
-}
+.select {
+  position: relative;
 
-:global(.ant-select-arrow) {
-  display: block;
-  top: 50%;
-  right: spacings.$s-4;
-  margin-top: -2px;
-}
+  .selectedOption {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-.dropdown {
-  display: flex;
-  align-items: center;
-  font-size: typo.$s;
-  border-radius: 4px;
-  border: 1px solid hsl(var(--english-breakfast-600));
-  background-color: transparent;
-  color: hsl(var(--dark-orchestra-600));
-  box-shadow: shadowTemplate(var(--english-breakfast-900));
+    font-size: typo.$s;
+    padding: spacings.$s-2 spacings.$s-4;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid hsl(var(--english-breakfast-800));
+    box-shadow: shadowTemplate(var(--english-breakfast-500));
+    cursor: pointer;
+
+    span {
+      margin-right: spacings.$s-8;
+    }
+
+    svg {
+      margin-top: 4px;
+    }
+
+    &:hover {
+      border-color: hsl(var(--english-breakfast-600));
+    }
+  }
+
+  .optionList {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    padding: 0;
+    margin-top: spacings.$s-1;
+    max-height: 200px;
+    overflow-y: auto;
+    list-style: none;
+    background-color: transparent;
+    border: 1px solid hsl(var(--english-breakfast-800));
+    border-radius: 4px;
+    box-shadow: shadowTemplate(var(--english-breakfast-500));
+
+    .option {
+      padding: spacings.$s-2 spacings.$s-4;
+      font-size: typo.$xs;
+      color: hsl(var(--dark-orchestra-600));
+      cursor: pointer;
+
+      &.selected {
+        background-color: hsl(var(--english-breakfast-600));
+        color: hsl(var(--starbright-600));
+      }
+
+      &:hover {
+        background-color: hsl(var(--english-breakfast-800));
+        color: hsl(var(--starbright-600));
+      }
+    }
+  }
+
+  /*   &.open {
+    .selectedOption {
+      background-color: #40a9ff;
+    }
+  } */
 }
