increase layout nav rule specifity

--- a/src/stylesheets/_layout.scss
+++ b/src/stylesheets/_layout.scss
@@ -27,7 +27,7 @@ header {
   padding-right: 2.5rem;
 }
 
-header+nav {
+header+nav:first-of-type {
   padding: 0 2.5rem;
   position: sticky;
   top:0 // Go sticky when top distance is zero
