--- a/src/components/others/navigation/index.module.scss
+++ b/src/components/others/navigation/index.module.scss
@@ -18,6 +18,12 @@ $body-margin: 2.5rem;
   align-items: center;
   width: 100%;
   height: 3.5rem;
+  z-index: 1000;
+
+  &.fixedAtTop {
+    position: fixed;
+    top: 0;
+  }
 
   .nav {
     @include hideBelowTabletSize();
@@ -52,6 +58,7 @@ $body-margin: 2.5rem;
   position: fixed;
   left: 0;
   right: 0;
+  top: 0;
   height: 100%;
   max-height: 100vh;
   background-color: hsl(var(--starbright-600));
@@ -60,14 +67,6 @@ $body-margin: 2.5rem;
   transition: opacity 0.4s ease-out;
   opacity: 0;
   visibility: hidden;
-
-  @media screen and (max-width: $breakpoint-tablet) {
-    top: 260px;
-  }
-
-  @media screen and (max-width: $breakpoint-mobile) {
-    top: 320px;
-  }
 
   &.visible {
     opacity: 1;
@@ -89,10 +88,9 @@ $body-margin: 2.5rem;
 .overlayNav {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
-  height: 100px;
-  margin-top: spacings.$s-12;
+  height: 100%;
 
   a {
     visibility: hidden;
@@ -143,5 +141,4 @@ $body-margin: 2.5rem;
     font-weight: bold;
     margin: 0 0 20px;
   }
-
 }
