--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -83,3 +83,17 @@ small {
   font-size: typo.$xs;
 }
 
+.ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+  display: inline-block;
+  word-break: break-word;
+}
+
+.ellipsis:hover {
+  text-overflow: clip;
+  white-space: normal;
+  word-break: break-all;
+}
