fix: display jury decision during Appeal period

--- a/src/components/others/route_article/arbitrationDetails/appeal/index.module.scss
+++ b/src/components/others/route_article/arbitrationDetails/appeal/index.module.scss
@@ -48,6 +48,17 @@
     width: 100%;
   }
 
+  .juryDecision {
+    display: flex;
+    justify-content: center;
+    margin-bottom: spacings.$s-12;
+
+    span {
+      margin-left: spacings.$s-2;
+      color: hsl(var(--red-reign-600));
+    }
+  }
+
   .crowdFundingPanel :global {
     .ant-progress {
       .ant-progress-text {
